# coursift

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
coursift/: __init__.py  cli.py  config.py  consolidate.py  constitution.py  context_pack.py  cost.py  coupling.py  deps.py  drift.py  duplicates.py  embed.py  forget.py  graph.py  health.py  impact.py  lessons.py  onboard.py  platforms.py  preflight.py  query.py  report.py  scanner.py  scope.py  security.py  serve.py  sessions.py  skill.py  verify.py  viz.py
docs/: WHAT_IS_COURSIFT.md
skills/: SKILL.md
