[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coursift"
version = "0.7.0"
description = "A cross-project knowledge graph and memory layer for AI coding agents (Claude Code, Cursor, Copilot, Codex, Gemini & more) — maps code, conversations, and decisions across all your projects."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Damu-D", email = "damunk034@gmail.com" }]
keywords = ["claude", "knowledge-graph", "ai", "codebase", "memory", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "networkx>=3",
  "anthropic>=0.30",
  "httpx>=0.27",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
all = ["mcp>=1.0"]

[project.scripts]
coursift = "coursift.cli:app"
coursift-mcp = "coursift.serve:main"

[project.urls]
Homepage = "https://github.com/Damu-D/coursift"
Repository = "https://github.com/Damu-D/coursift"
Issues = "https://github.com/Damu-D/coursift/issues"

[tool.hatch.build.targets.wheel]
packages = ["coursift"]
